--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-/CS385GameClient/Library/
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
@@ -69,3 +69,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+CS385GameClient/Library/SourceAssetDB
+CS385GameClient/Library/SourceAssetDB
+CS385GameClient/Library/SourceAssetDB
+CS385GameClient/Library/ArtifactDB
+CS385GameClient/Library/*
