--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-/[Aa]ssets/[Ss]treamingAssets/aa.meta
-/[Aa]ssets/[Ss]treamingAssets/aa/*
+/[Aa]ssets/StreamingAssets/aa.meta
+/[Aa]ssets/StreamingAssets/aa/*
 CS385GameClient/Library/SourceAssetDB
 CS385GameClient/Library/SourceAssetDB
 CS385GameClient/Library/SourceAssetDB
 CS385GameClient/Library/ArtifactDB
 CS385GameClient/Library/*
-CS385GameClient/[Tt]emp/*
-CS385GameClient/[Oo]bj/*
-CS385GameClient/[Bb]uild/*
-CS385GameClient/[Bb]uilds/*
-CS385GameClient/[Ll]ogs/*
-CS385GameClient/[Uu]ser[Ss]ettings/*
+CS385GameClient/Temp/*
+CS385GameClient/Obj/*
+CS385GameClient/Build/*
+CS385GameClient/Builds/*
+CS385GameClient/Logs/*
+CS385GameClient/UserSettings/*
